# tty7

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  issue.yml
.github/scripts/: bundle-linux.sh  bundle-macos.sh  bundle-windows.ps1  windows-installer.iss
.github/workflows/: ci.yml  nightly.yml  release.yml
assets/: tty7.icns
assets/completions/: ansible.json  apt.json  bat.json  brew.json  bun.json  bundle.json  cargo.json  cmake.json  code.json  composer.json  conda.json  curl.json  dart.json  deno.json  docker-compose.json  docker.json  doctl.json  dotnet.json  emacs.json  esbuild.json  eslint.json  fd.json  flutter.json  flyctl.json  fzf.json  gem.json  gh.json  git.json  go.json  gradle.json  helm.json  htop.json  jest.json  jq.json  k9s.json  kind.json  kubectl.json  kubectx.json  kubens.json  make.json  (+57 more)
openwiki/: quickstart.md
openwiki/architecture/: client-terminal-ui.md  runtime.md
openwiki/domain/: data-and-config.md  product-workflows.md
openwiki/operations/: development-testing-release.md
scripts/bench/: README.md  doom-fire-fps.patch  fire.sh  io.sh  mem.sh  run_one.sh  setup.sh
scripts/fig-convert/: .gitignore  README.md  convert.mjs
src/: main.rs
src/core/: actions.rs  config.rs  mod.rs  osc.rs  session.rs  shells.rs  threads.rs  update.rs
src/daemon/: mod.rs  pane.rs  protocol.rs  server.rs  shell_integration.rs  spawn.rs  transport.rs  winproc.rs
src/terminal/: cmd_editor.rs  completion.rs  element.rs  fps.rs  highlight.rs  history.rs  hold.rs  input.rs  mod.rs  palette.rs  remote.rs  reverse_search.rs  search.rs  signature.rs  size.rs  typeahead.rs  view.rs
src/ui/: app.rs  hints.rs  home.rs  keymap.rs  mod.rs  palette.rs  pane.rs  presets.rs  settings.rs  tab_strip.rs  theme.rs
